# xort

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benchmarks/: results.csv  results.md
scripts/: benchmark.sh  difftest.sh
src/: cli.rs  compare.rs  compress.rs  config.rs  diag.rs  engine.rs  external.rs  format.rs  input.rs  key.rs  lib.rs  main.rs  radix.rs
tests/: cli.rs
