[package]
name = "xort"
version = "0.1.0"
edition = "2021"
description = "A fast, modern, parallel drop-in replacement for the Unix sort command"
license = "MIT OR Unlicense"
repository = "https://github.com/otl/pss"
readme = "README.md"
keywords = ["sort", "cli", "coreutils", "parallel", "performance"]
categories = ["command-line-utilities"]

[[bin]]
name = "xort"
path = "src/main.rs"

[lib]
name = "xort"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.4.0"
memchr = "2"
rayon = "1"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[dev-dependencies]
serde_json = "1.0.150"
