[package]
name = "xort"
version = "0.1.1"
edition = "2021"
description = "A fast, modern, parallel drop-in replacement for the Unix sort command"
license = "MIT"
repository = "https://github.com/otl/xort"
readme = "README.md"
keywords = ["sort", "cli", "coreutils", "parallel", "performance"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/benchmarks", "/scripts", "/CLAUDE.md"]

[[bin]]
name = "xort"
path = "src/main.rs"

[lib]
name = "xort"
path = "src/lib.rs"

[dependencies]
anstream = "1.0.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
csv = "1.4.0"
flate2 = "1"
indicatif = "0.17"
jiff = "0.1"
memchr = "2"
owo-colors = "4.3.0"
rayon = "1"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tempfile = "3.27.0"
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
